# telegrambot

./: pyproject.toml  requirements.txt
Bot/: config.py  main.py  test.py
Bot/Database/: DataBase.sqlite3  database.py
Bot/Handlers/: Global_Commands.py  Keyboards.py  admin.py
