[project]
name = "telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiogram>=3.24.0",
    "aiohttp-socks>=0.11.0",
    "aiosqlite>=0.22.1",
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "flask>=3.1.3",
    "httpx>=0.28.1",
    "keyboard>=0.13.5",
    "logging>=0.4.9.6",
    "scalene>=2.1.3",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.46.0",
]
