[project]
name = "telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiogram>=3.24.0",
    "aiohttp-socks>=0.11.0",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "keyboard>=0.13.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.46.0",
]
